<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_back"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/title_about_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:layout_weight="2"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/image_about_us"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/aboutus"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/who_we_are"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/who"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_who_we_are"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/whoTx"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/our_mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mission"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_our_mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/missionTx"
                android:textSize="20sp"
                android:layout_margin="5dp"/>


            <TextView
                android:id="@+id/why_hnI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/why"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_why_hnI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_margin="5dp"
                android:text="@string/whyTx"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/customer_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/customers"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_customer_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customersTx"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_margin="5dp"
                android:textStyle="italic"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>